[package]
name = "ion"
version = "0.1.0"

edition.workspace = true
license.workspace = true
authors = ["Redfire <redfire75369@hotmail.com>"]

[dependencies]
arrayvec.workspace = true
bitflags.workspace = true
byteorder.workspace = true
bytemuck.workspace = true
colored.workspace = true
chrono.workspace = true
encoding_rs.workspace = true
futures-channel.workspace = true
futures-executor.workspace = true
futures-util.workspace = true
indent.workspace = true
itoa.workspace = true
mozjs.workspace = true
typed-arena.workspace = true
utf16string.workspace = true

[dependencies.ion-proc]
workspace = true
optional = true

[dependencies.sourcemap]
workspace = true
optional = true

[features]
debugmozjs = ["mozjs/debugmozjs"]
macros = ["dep:ion-proc"]
sourcemap = ["dep:sourcemap"]

[lints]
workspace = true

[lib]
doctest = false

[[example]]
name = "macros"
crate-type = ["lib"]
required-features = ["macros"]
